# FF13Fix

./: CMakeLists.txt
Common/: MemPatch.h  WinUtil.h
d3d9ex/: AutoFix.cpp  Context.cpp  IDirect3D9.cpp  IDirect3DDevice9.cpp  VertexFix.cpp  Wrapper.h  XInputManager.cpp  XInputManager.h  exports.def  targetver.h
